3. Inter Microservices Communication/POC/kube/api-service.yml
apiVersion: v1
kind: Service
metadata:
  name: compliments-api
  namespace: compliments
spec:
  selector:
    app: compliments-api
  ports:
    - port: 3000
      targetPort: 3000
