3. Inter Microservices Communication/POC/kube/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: front
  namespace: compliments
  annotations:
    linkerd.io/inject: enabled
spec:
  type: NodePort
  selector:
    app: front
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
