3. Inter Microservices Communication/POC/kube/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: compliments-ingress
  namespace: compliments
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: compliments.162.38.112.221.nip.io
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: compliments-api
                port:
                  number: 3000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: front
                port:
                  number: 80
